Cleaned up old "ix" style indexing and graph traversal calls.

--- a/Bloom Graph.ipynb
+++ b/Bloom Graph.ipynb
@@ -34,11 +34,11 @@
     "    ew = dict()\n",
     "\n",
     "    for g in df.index:\n",
-    "        z = df.ix[g]\n",
+    "        z = df.loc[g]\n",
     "        for c in (z[z > 0]).index:\n",
     "            ekey = tuple(sorted([g, c]))\n",
-    "            ew[ekey] = df[c].ix[g]\n",
-    "            A.add_edge(g, c, weight=df[c].ix[g], style=\"filled\")\n",
+    "            ew[ekey] = df.loc[g, c]\n",
+    "            A.add_edge(g, c, weight=df.loc[g, c], style=\"filled\")\n",
     "\n",
     "    v = ew.values()\n",
     "    mn = min(v)\n",
@@ -207,7 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "for n in A.nodes_iter():\n",
+    "for n in A.nodes():\n",
     "    n.attr[\"style\"] = \"filled\"\n",
     "    n.attr[\"fillcolor\"] = \"#ffffc2\"\n",
     "    n.attr[\"fontname\"] = \"sans serif bold\"\n",
@@ -232,7 +232,7 @@
     "for i in cstable.index.tolist():\n",
     "    if i in A:\n",
     "        n = A.get_node(i)\n",
-    "        c = cstable.ix[i].nsize\n",
+    "        c = cstable.loc[i].nsize\n",
     "        w = 1.25 * c\n",
     "        h = 1.25 * c\n",
     "        n.attr[\"width\"] = str(w)\n",
@@ -302,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "for n in A.nodes_iter():\n",
+    "for n in A.nodes():\n",
     "    if n not in centers:\n",
     "        if len(A[n]) > 1:\n",
     "            n.attr[\"style\"] = \"filled\"\n",
